# Distil

./: README.md  pyproject.toml
src/: distil_xlm.py  lstm_trainer.py  settings.py  trainer.py  utils.py  xlm_data.py  xlm_trainer.py
src/lstm_utils/: loss.py  modeling_lstm.py  text_utils.py
